...
            Expanded(
              flex: 2,
              child: TextField(
                controller: _logradouroController,
                style: inputTextStyle,
                decoration:
                    inputDecoration.copyWith(hintText: 'Ex: Rua rego freitas'),
              ),
            ),
            const SizedBox(width: 12),
            Expanded(
              child: TextField(
                controller: _numeroController,
                style: inputTextStyle,
                decoration: inputDecoration.copyWith(hintText: 'Ex: 452'),
                keyboardType: TextInputType.number,
              ),
            ),
          ],
        ),
        const SizedBox(height: 12),
...
              ),
              const Spacer(),
              const Icon(Icons.check_circle, color: Color(0xFF00994B)),
            ],
          ),
          const SizedBox(height: 20),
          const Text('Nome do cartão',
              style: TextStyle(
                  fontSize: 14,
                  fontWeight: FontWeight.w500,
                  color: Color(0xFF3F3F3D))),
          const SizedBox(height: 6),
          TextField(
            controller: _cardNameController,
            style: const TextStyle(color: Color(0xFF14181B)),
            decoration: _inputDecoration('Nome como no cartão'),
            textCapitalization: TextCapitalization.words,
          ),
          const SizedBox(height: 16),
          const Text('Número do cartão',
              style: TextStyle(
                  fontSize: 14,
...
          const SizedBox(height: 6),
          TextField(
            controller: _cardNumberController,
            style: const TextStyle(color: Color(0xFF14181B)),
            keyboardType: TextInputType.number,
            inputFormatters: [InputMasks.cardNumber],
            decoration: _inputDecoration('0000 0000 0000 0000'),
          ),
          const SizedBox(height: 16),
          Row(
            children: [
              Expanded(
                child: Column(
...
